<resources>
    <string name="app_name">My_Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">,</string>
    <string name="key_equals">=</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multi">×</string>
    <string name="key_left_bracket">(</string>
    <string name="key_right_bracket">)</string>
    <string name="key_del">AC</string>
    <string name="key_div">÷</string>
    <string name="key_back">⌫</string>
    <string name="key_root">√</string>
    <string name="cal_key_style"><i>Cal key style</i></string>
    <string name="my_cool_style"><u>My cool style</u></string>
    <string name="material_light"><b>Material light</b></string>
    <string name="material_dark"><i><b><u>Material</u></b></i>-<i><u>dark</u></i></string>
    <string name="clear_history">Clear history</string>
    <string name="menu_theme">Choice theme</string>
    <string name="instructions">instructions</string>
    <string name="instructions_google" translatable="false">https://support.google.com/android/answer/6223877?hI=ru</string>
</resources>