<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/material_light"
        android:title="@string/material_light"
        app:showAsAction="never" />
    <item
        android:id="@+id/cal_key_style"
        android:title="@string/cal_key_style"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_cool_style"
        android:title="@string/my_cool_style"
        app:showAsAction="never" />
    <item
        android:id="@+id/material_dark"
        android:title="@string/material_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_history"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_history"
        app:showAsAction="ifRoom" />
</menu>