<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/hd"
    android:padding="@dimen/layout_padding">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollIndicatorDown"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/lain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_zero"
            android:layout_marginBottom="@dimen/margin_zero"
            android:gravity="end"
            android:textSize="@dimen/textSize_history"
            app:layout_constraintBottom_toTopOf="@+id/lain2" />

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/lain2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_start_indent"
        android:layout_marginEnd="@dimen/margin_start_indent"
        android:backgroundTint="@color/black"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/developments" />

    <TextView
        android:id="@+id/developments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/textSize_developments"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_zero"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/textSize_result"
        app:layout_constraintBottom_toTopOf="@+id/lain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/lain"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_start_indent"
        android:layout_marginEnd="@dimen/margin_start_indent"
        android:backgroundTint="@color/black"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/key_div" />

    <Button
        android:id="@+id/key_menu"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:text="@string/key_menu"
        android:textSize="@dimen/textSizeMenu"
        android:textColor="@color/red"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/key_0" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/key_1"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/key_menu"
        app:layout_constraintEnd_toEndOf="@+id/key_menu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toEndOf="@+id/key_menu" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_equals"
        app:layout_constraintStart_toEndOf="@+id/key_0" />

    <Button
        android:id="@+id/key_equals"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_dot" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_0"
        app:layout_constraintEnd_toEndOf="@+id/key_0"
        app:layout_constraintStart_toEndOf="@id/key_1" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_dot"
        app:layout_constraintEnd_toEndOf="@id/key_dot"
        app:layout_constraintStart_toEndOf="@id/key_2" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_equals"
        app:layout_constraintEnd_toEndOf="@id/key_equals"
        app:layout_constraintStart_toEndOf="@id/key_3" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_1"
        app:layout_constraintEnd_toEndOf="@id/key_1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_2"
        app:layout_constraintEnd_toEndOf="@id/key_2"
        app:layout_constraintStart_toEndOf="@id/key_4" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_3"
        app:layout_constraintEnd_toEndOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_5" />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_plus"
        app:layout_constraintEnd_toEndOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_6" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintEnd_toEndOf="@id/key_4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_5"
        app:layout_constraintEnd_toEndOf="@id/key_5"
        app:layout_constraintStart_toEndOf="@id/key_7" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_6"
        app:layout_constraintEnd_toEndOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_8" />

    <Button
        android:id="@+id/key_multi"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_multi"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_minus"
        app:layout_constraintEnd_toEndOf="@+id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_9" />

    <Button
        android:id="@+id/key_del"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_del"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_7"
        app:layout_constraintEnd_toEndOf="@id/key_7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/key_back"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_back"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_8"
        app:layout_constraintEnd_toEndOf="@id/key_8"
        app:layout_constraintStart_toEndOf="@id/key_del" />

    <Button
        android:id="@+id/key_left_bracket"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_left_bracket"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_right_bracket"
        app:layout_constraintStart_toEndOf="@id/key_back" />

    <Button
        android:id="@+id/key_right_bracket"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_right_bracket"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_left_bracket" />

    <Button
        android:id="@+id/key_div"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/key_multi"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        app:layout_constraintStart_toEndOf="@id/key_right_bracket" />
</androidx.constraintlayout.widget.ConstraintLayout>